--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -1,12 +1,49 @@
+html {
+  background-color: #D6C5F0;
+}
+
+.top-left {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ex {
+  display: flex;
+  margin-inline-start: 0px;
+  list-style-type: none;
+  padding: 5px 10px 5px 10px;
+  font-weight: 600;
+  background-color: lightcoral;
+}
+
+.line {
+  display: flex;
+  margin-inline-start: 0px;
+  list-style-type: none;
+  padding: 5px 10px 5px 10px;
+  font-weight: 600;
+  background-color: palegoldenrod;
+}
+
+.oh {
+  display: flex;
+  margin-inline-start: 0px;
+  list-style-type: none;
+  padding: 5px 10px 5px 10px;
+  font-weight: 600;
+  background-color: lightgreen;
+}
+
 .nav {
   float: right;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 40px;
   flex-direction: column;
 }
 
 a {
   display: block;
-  margin-right: 20px;
+  margin-right: 50px;
   line-height: 25px;
   text-align: right;
   text-decoration: none;
@@ -34,8 +71,117 @@ a {
   margin-top: 100px;
 }
 
-.input, .output {
+.inout-container {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  /* margin: 20px; */
+  width: 100%;
+}
+
+form {
+  display: grid;
+  justify-items: center;
+}
+
+select {
+  border: 2px solid #000;
+  padding: 5px;
+  outline: none;
+  width: 200px;
+  font-size: 22px;
+  margin-left: 50px;
+}
+
+.dropdown {
+  padding: 10px;
+  background-color: #9BD8FB;
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
+}
+
+textarea {
   width: 300px;
+  height: 250px;
+  border: 2px solid #000;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+  padding: 20px;
+  outline: none;
+  resize: none;
+}
+
+textarea::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+  color: #ccc;
+  text-align: start;
+}
+
+.translate-button {
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
+  border: none;
+  outline: none;
+  border: 2px solid #000;
+  background-color: #9BD8FB;
+  font-weight: 600;
+}
+
+h1 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 22px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.output {
+  width: 300px;
+  height: 250px;
+  padding: 20px;
+  border: 2px solid #000;
+  background-color: #fff;
+}
+
+.empty {
+  padding: 10px;
+  background-color: #9BD8FB;
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: 600;
+  border-right: 2px solid #000;
+}
+
+h1:first-child {
+  margin-right: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.bar {
+  display: flex;
+  justify-content: flex-end;
+  border: 2px solid #000;
+  background-color: #fff;
+}
+
+li {
+  display: flex;
+  margin-inline-start: 0px;
+  list-style-type: none;
+  border-left: 2px solid #000;
+  padding: 5px 10px 5px 10px;
+  font-weight: 600;
 }
