--- a/client/src/styles/Saved.css
+++ b/client/src/styles/Saved.css
@@ -22,6 +22,7 @@
   border-left: 2px solid #000;
   border-right: 2px solid #000;
   border-bottom: 2px solid #000;
+  width: 350px;
   height: 400px;
   overflow: scroll;
 }
