--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -8,14 +8,31 @@
   width: 100%;
 }
 
+h5 {
+  margin-block-start: 15px;
+}
+
 .card {
+  display: flex;
+  align-items: flex-start;
   border: 2px solid #000;
-  background-color: #fff;
-  width: 225px;
+  background-color: #9bd8fb;
+  width: 230px;
   height: 300px;
 }
 
-.data-wrap {
+.data {
+  font-size: 18px;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+.card:hover {
+  background-color: #ff9daa;
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.english {
+  font-size: 24px;
 }
