--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -63,7 +63,7 @@ a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  width: 100%;
+  margin-top: 50px;
 }
 
 .bar {
@@ -213,3 +213,48 @@ h3 {
   background-color: #fff;
 }
 /** OUTPUT CONTAINER **/
+
+/** LANGUAGES PAGE **/
+h6 {
+  margin-block-start: 1em;
+  margin-block-end: 0px;
+}
+
+.info {
+  font-size: 50px;
+  margin-left: 50px;
+}
+/** LANGUAGES PAGE **/
+
+/** ABOUT PAGE **/
+.about-title {
+  margin-left: 200px;
+  margin-top: 50px;
+}
+
+.about-box {
+  width: 550px;
+  height: 300px;
+  background-color: #fff;
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
+  border-bottom: 2px solid #000;
+  margin-left: 200px;
+  margin-top: 30px;
+}
+
+.about-bar {
+  display: flex;
+  justify-content: flex-end;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  background-color: #f37687;
+  font-style: italic;
+}
+
+.about-info {
+  font-size: 14px;
+  font-family: 'Roboto Mono', monospace;
+  margin: 20px;
+}
+/** ABOUT PAGE **/
