--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -10,6 +10,7 @@
 
 h5 {
   margin-block-start: 15px;
+  font-family: "Trispace", sans-serif;
 }
 
 .card {
@@ -17,8 +18,8 @@ h5 {
   align-items: flex-start;
   border: 2px solid #000;
   background-color: #9bd8fb;
-  width: 230px;
-  height: 300px;
+  width: 275px;
+  height: 350px;
 }
 
 .data {
@@ -34,5 +35,5 @@ h5 {
 }
 
 .english {
-  font-size: 24px;
+  font-size: 26px;
 }
