--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -16,6 +16,7 @@ html {
   padding: 5px 10px 5px 10px;
   font-weight: 600;
   background-color: #fe907f;
+  font-family: 'Trispace', sans-serif;
 }
 
 .line {
@@ -25,6 +26,7 @@ html {
   padding: 5px 10px 5px 10px;
   font-weight: 600;
   background-color: #feeca6;
+  font-family: 'Trispace', sans-serif;
 }
 
 .oh {
@@ -34,6 +36,7 @@ html {
   padding: 5px 10px 5px 10px;
   font-weight: 600;
   background-color: #c5e6ab;
+  font-family: 'Trispace', sans-serif;
 }
 
 .nav {
@@ -50,11 +53,14 @@ a {
   text-decoration: none;
   color: #000;
   font-weight: 800;
+  font-size: 20px;
+  font-family: 'Trispace', sans-serif;
 }
 
 a:hover {
   background-color: #fff;
   color: #000;
+  font-family: 'Trispace', sans-serif;
 }
 /** TOP HEADER SECTION **/
 
@@ -75,6 +81,7 @@ a:hover {
 }
 
 h1 {
+  font-family: 'Trispace', sans-serif;
   font-size: 20px;
   font-weight: 600;
   border-right: 2px solid #000;
@@ -97,6 +104,7 @@ li {
   background-color: #fff;
   padding: 5px 10px 5px 10px;
   font-weight: 600;
+  font-family: 'Trispace', sans-serif;
 }
 
 select {
@@ -105,6 +113,7 @@ select {
   outline: none;
   width: 200px;
   font-size: 22px;
+  font-family: 'Trispace', sans-serif;
   margin-left: 65px;
 }
 /** USED IN BOTH CONTAINER **/
@@ -135,8 +144,7 @@ textarea {
   width: 275px;
   height: 200px;
   border: 2px solid #000;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Trispace', sans-serif;
   font-weight: 600;
   font-size: 22px;
   margin-top: 20px;
@@ -146,8 +154,7 @@ textarea {
 }
 
 textarea::placeholder {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Trispace', sans-serif;
   font-weight: 600;
   font-size: 22px;
   color: #ccc;
@@ -164,6 +171,7 @@ textarea::placeholder {
   border: 2px solid #000;
   background-color: #fff;
   font-weight: 600;
+  font-family: 'Trispace', sans-serif;
   cursor: pointer;
 }
 
@@ -218,18 +226,20 @@ h3 {
 h6 {
   margin-block-start: 1em;
   margin-block-end: 0px;
+  font-family: 'Trispace', sans-serif;
 }
 
 .info {
   font-size: 50px;
-  margin-left: 50px;
+  margin-left: 25px;
 }
 /** LANGUAGES PAGE **/
 
 /** ABOUT PAGE **/
 .about-title {
-  margin-left: 200px;
+  margin-left: 250px;
   margin-top: 50px;
+  font-family: 'Trispace', sans-serif;
 }
 
 .about-box {
@@ -239,7 +249,7 @@ h6 {
   border-left: 2px solid #000;
   border-right: 2px solid #000;
   border-bottom: 2px solid #000;
-  margin-left: 200px;
+  margin-left: 250px;
   margin-top: 30px;
 }
 
@@ -249,12 +259,11 @@ h6 {
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
   background-color: #f37687;
-  font-style: italic;
 }
 
 .about-info {
-  font-size: 14px;
-  font-family: 'Roboto Mono', monospace;
+  font-size: 12.5px;
+  font-family: 'Trispace', sans-serif;
   margin: 20px;
 }
 /** ABOUT PAGE **/
