--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -9,10 +9,11 @@
   float: left;
   text-align: center;
   line-height: 50px;
-  width: 100px;
+  width: 120px;
   height: 50px;
   background-color: #ff9daa;
   color: #fff;
+  font-family: 'Trispace', sans-serif;
 }
 
 .box-container {
@@ -35,11 +36,12 @@
   justify-content: flex-end;
   border: 2px solid #000;
   background-color: #9bd8fb;
-  font-style: italic;
+  font-family: 'Trispace', sans-serif;
 }
 
 .textbox {
   padding: 10px;
+  font-family: 'Trispace', sans-serif;
 }
 
 p {
@@ -50,5 +52,6 @@ p {
 }
 
 .title {
-  font-size: 50px;
+  font-size: 40px;
+  font-family: 'Trispace', sans-serif;
 }
