--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -11,9 +11,13 @@
   line-height: 50px;
   width: 120px;
   height: 50px;
-  background-color: #ff9daa;
+  background-color: #fc9cb0;
   color: #fff;
   font-family: 'Trispace', sans-serif;
+}
+
+.click:hover {
+  color: #0279b2;
 }
 
 .box-container {
@@ -25,23 +29,28 @@
   width: 800px;
   height: 450px;
   background-color: #fff;
-  border-left: 2px solid #000;
-  border-right: 2px solid #000;
-  border-bottom: 2px solid #000;
+  border-left: 2px solid #0279b2;
+  border-right: 2px solid #0279b2;
+  border-bottom: 2px solid #0279b2;
+  box-shadow: 10px 10px 1px 1px #fc9cb0;
   overflow: scroll;
 }
 
 .home-bar {
   display: flex;
   justify-content: flex-end;
-  border: 2px solid #000;
-  background-color: #9bd8fb;
+  border: 2px solid #0279b2;
+  background-color: #0279b2;
+  box-shadow: 10px 10px 1px 1px #fc9cb0;
   font-family: 'Trispace', sans-serif;
 }
 
 .textbox {
   padding: 10px;
+  margin: 20px;
+  border: 2px solid #0279b2;
   font-family: 'Trispace', sans-serif;
+  color: #0279b2;
 }
 
 p {
@@ -54,4 +63,5 @@ p {
 .title {
   font-size: 40px;
   font-family: 'Trispace', sans-serif;
+  color: #0279b2;
 }
