--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -13,11 +13,15 @@ h5 {
   font-family: "Trispace", sans-serif;
 }
 
+h6 {
+  color: #0279b2;
+}
+
 .card {
   display: flex;
   align-items: flex-start;
-  border: 2px solid #000;
-  background-color: #9bd8fb;
+  background-color: #fff;
+  border: 2px solid #0279b2;
   width: 275px;
   height: 350px;
 }
@@ -26,12 +30,12 @@ h5 {
   font-size: 18px;
   padding-right: 20px;
   padding-left: 20px;
+  color: #0279b2;
 }
 
 .card:hover {
-  background-color: #ff9daa;
-  color: #fff;
-  transform: translateY(-7px);
+  box-shadow: 0px 12px #fc9cb0;
+  transform: translateY(-10px);
 }
 
 .english {
