--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -1,42 +1,21 @@
 html {
-  background-color: #d3bcd3;
+  background-color: #ddd1e4;
   height: 100vh;
 }
 
 /** TOP HEADER SECTION **/
-.top-left {
+.top-bar {
   display: flex;
-  justify-content: flex-start;
-}
-
-.ex {
-  display: flex;
+  justify-content: flex-end;
   margin-inline-start: 0px;
   list-style-type: none;
-  padding: 5px 10px 5px 10px;
-  font-weight: 600;
-  background-color: #fe907f;
-  font-family: 'Trispace', sans-serif;
+  color: #fff;
 }
 
-.line {
-  display: flex;
-  margin-inline-start: 0px;
-  list-style-type: none;
-  padding: 5px 10px 5px 10px;
-  font-weight: 600;
-  background-color: #feeca6;
-  font-family: 'Trispace', sans-serif;
-}
-
-.oh {
-  display: flex;
-  margin-inline-start: 0px;
-  list-style-type: none;
-  padding: 5px 10px 5px 10px;
-  font-weight: 600;
-  background-color: #c5e6ab;
-  font-family: 'Trispace', sans-serif;
+.header {
+  padding: 5px;
+  border-right: 2px solid #0279b2;
+  border-bottom: 2px solid #0279b2;
 }
 
 .nav {
@@ -51,16 +30,16 @@ a {
   line-height: 25px;
   text-align: right;
   text-decoration: none;
-  color: #000;
+  color: #0279b2;
   font-weight: 800;
   font-size: 20px;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 a:hover {
   background-color: #fff;
-  color: #000;
-  font-family: 'Trispace', sans-serif;
+  color: #0279b2;
+  font-family: "Trispace", sans-serif;
 }
 /** TOP HEADER SECTION **/
 
@@ -75,17 +54,18 @@ a:hover {
 .bar {
   display: flex;
   justify-content: flex-end;
-  border: 2px solid #000;
-  background-color: #70b6ec;
-  box-shadow: 12px 12px 1px 1px #ff9daa;
+  border: 2px solid #0279b2;
+  background-color: #0279b2;
+  box-shadow: 12px 12px 1px 1px #fc9cb0;
 }
 
 h1 {
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   font-size: 20px;
   font-weight: 600;
-  border-right: 2px solid #000;
+  border-right: 2px solid #0279b2;
   background-color: #fff;
+  color: #0279b2;
   margin-block-start: 0;
   margin-block-end: 0;
 }
@@ -100,20 +80,22 @@ li {
   display: flex;
   margin-inline-start: 0px;
   list-style-type: none;
-  border-left: 2px solid #000;
+  border-left: 2px solid #0279b2;
   background-color: #fff;
+  color: #0279b2;
   padding: 5px 10px 5px 10px;
   font-weight: 600;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 select {
-  border: 2px solid #000;
+  border: 2px solid #0279b2;
+  color: #0279b2;
   padding: 5px;
   outline: none;
   width: 200px;
   font-size: 22px;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   margin-left: 65px;
 }
 /** USED IN BOTH CONTAINER **/
@@ -127,24 +109,26 @@ form {
   display: grid;
   justify-items: center;
   width: 350px;
-  border: 2px solid #000;
-  background-color: #9bd8fb;
-  box-shadow: 12px 12px 1px 1px #ff9daa;
+  border: 2px solid #0279b2;
+  background-color: #fff;
+  box-shadow: 12px 12px 1px 1px #fc9cb0;
 }
 
 .dropdown {
   padding: 10px;
-  background-color: #9bd8fb;
-  border-left: 2px solid #000;
-  border-right: 2px solid #000;
-  box-shadow: 12px 12px 1px 1px #ff9daa;
+  background-color: #fff;
+  border-left: 2px solid #0279b2;
+  border-right: 2px solid #0279b2;
+  box-shadow: 12px 12px 1px 1px #fc9cb0;
 }
 
 textarea {
   width: 275px;
   height: 200px;
-  border: 2px solid #000;
-  font-family: 'Trispace', sans-serif;
+  border: 2px solid #0279b2;
+  background-color: #0279b2;
+  color: #fff;
+  font-family: "Trispace", sans-serif;
   font-weight: 600;
   font-size: 22px;
   margin-top: 20px;
@@ -154,10 +138,10 @@ textarea {
 }
 
 textarea::placeholder {
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   font-weight: 600;
   font-size: 22px;
-  color: #ccc;
+  color: #fff;
   text-align: start;
 }
 
@@ -168,16 +152,17 @@ textarea::placeholder {
   height: 40px;
   border: none;
   outline: none;
-  border: 2px solid #000;
+  border: 2px solid #0279b2;
   background-color: #fff;
+  color: #0279b2;
   font-weight: 600;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   cursor: pointer;
 }
 
 .translate-button:hover {
   border: none;
-  background-color: #ff9daa;
+  background-color: #fc9cb0;
   color: #fff;
 }
 /** INPUT CONTAINER **/
@@ -192,23 +177,24 @@ h3 {
   font-size: 22px;
   margin-block-start: 0;
   margin-block-end: 0;
+  color: #fff;
 }
 
 .output-wrap {
   display: grid;
   justify-items: center;
   width: 350px;
-  border: 2px solid #000;
-  background-color: #9bd8fb;
-  box-shadow: 12px 12px 1px 1px #ff9daa;
+  border: 2px solid #0279b2;
+  background-color: #fff;
+  box-shadow: 12px 12px 1px 1px #fc9cb0;
 }
 
 .empty {
   padding: 10px;
-  background-color: #9bd8fb;
-  border-left: 2px solid #000;
-  border-right: 2px solid #000;
-  box-shadow: 12px 12px 1px 1px #ff9daa;
+  background-color: #fff;
+  border-left: 2px solid #0279b2;
+  border-right: 2px solid #0279b2;
+  box-shadow: 12px 12px 1px 1px #fc9cb0;
 }
 
 .output-textbox {
@@ -217,8 +203,8 @@ h3 {
   margin-top: 20px;
   margin-bottom: 80px;
   padding: 20px;
-  border: 2px solid #000;
-  background-color: #fff;
+  border: 2px solid #0279b2;
+  background-color: #0279b2;
 }
 /** OUTPUT CONTAINER **/
 
@@ -226,7 +212,7 @@ h3 {
 h6 {
   margin-block-start: 1em;
   margin-block-end: 0px;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 .info {
@@ -238,17 +224,19 @@ h6 {
 /** ABOUT PAGE **/
 .about-title {
   margin-left: 250px;
-  margin-top: 50px;
-  font-family: 'Trispace', sans-serif;
+  margin-top: 20px;
+  font-family: "Trispace", sans-serif;
+  color: #fff;
 }
 
 .about-box {
   width: 550px;
   height: 300px;
   background-color: #fff;
-  border-left: 2px solid #000;
-  border-right: 2px solid #000;
-  border-bottom: 2px solid #000;
+  box-shadow: 10px 10px 1px 1px #fc9cb0;
+  border-left: 2px solid #0279b2;
+  border-right: 2px solid #0279b2;
+  border-bottom: 2px solid #0279b2;
   margin-left: 250px;
   margin-top: 30px;
 }
@@ -256,14 +244,15 @@ h6 {
 .about-bar {
   display: flex;
   justify-content: flex-end;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
-  background-color: #f37687;
+  border-top: 2px solid #0279b2;
+  border-bottom: 2px solid #0279b2;
+  background-color: #0279b2;
 }
 
 .about-info {
   font-size: 12.5px;
-  font-family: 'Trispace', sans-serif;
+  color: #0279b2;
+  font-family: "Trispace", sans-serif;
   margin: 20px;
 }
 /** ABOUT PAGE **/
