--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -13,7 +13,7 @@
   height: 50px;
   background-color: #fc9cb0;
   color: #fff;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 .click:hover {
@@ -42,14 +42,14 @@
   border: 2px solid #0279b2;
   background-color: #0279b2;
   box-shadow: 10px 10px 1px 1px #fc9cb0;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 .textbox {
   padding: 10px;
   margin: 20px;
   border: 2px solid #0279b2;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   color: #0279b2;
 }
 
@@ -62,6 +62,6 @@ p {
 
 .title {
   font-size: 40px;
-  font-family: 'Trispace', sans-serif;
+  font-family: "Trispace", sans-serif;
   color: #0279b2;
 }
