--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -27,9 +27,9 @@ h6 {
 }
 
 .data {
-  font-size: 18px;
-  padding-right: 20px;
-  padding-left: 20px;
+  font-size: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
   color: #0279b2;
 }
 
@@ -39,5 +39,5 @@ h6 {
 }
 
 .english {
-  font-size: 26px;
+  font-size: 28px;
 }
