made cards responsive to webpage

--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -280,7 +280,7 @@ h6 {
 
 .allcomments {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   row-gap: 20px;
   justify-items: center;
   width: 100%;
