--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -2,7 +2,7 @@
 .ja-card,
 .zh-card {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   row-gap: 20px;
   justify-items: center;
   width: 100%;
@@ -18,7 +18,6 @@ h6 {
 }
 
 .card {
-  display: flex;
   align-items: flex-start;
   background-color: #fff;
   border: 2px solid #0279b2;
