--- a/client/src/styles/Create.css
+++ b/client/src/styles/Create.css
@@ -62,7 +62,7 @@ input::placeholder {
 
 .created-cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   row-gap: 20px;
   justify-items: center;
   width: 100%;
